// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should render 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    borderRadius={8}
    buttonPaddingBottom="0px"
    buttonPaddingLeft="12px"
    buttonPaddingRight="12px"
    buttonPaddingTop="0px"
    collapsable={false}
    color="primary"
    data-blade-component="button"
    defaultBackgroundColor="hsla(218, 89%, 51%, 1)"
    defaultBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 89%, 51%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
    focusBackgroundColor="hsla(218, 87%, 43%, 1)"
    focusBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
    focusRingColor="hsla(218, 89%, 51%, 0.18)"
    focusable={true}
    hoverBackgroundColor="hsla(218, 87%, 43%, 1)"
    hoverBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
    hoverIconColor="hsla(0, 0%, 100%, 1)"
    isDefiniteLoading={false}
    isFullWidth={false}
    isLoading={false}
    isPressed={false}
    minHeight="36px"
    motionDuration="duration.xquick"
    motionEasing="easing.standard"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    size="medium"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "hsla(218, 89%, 51%, 1)",
          "borderColor": "black",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 0,
          "cursor": "pointer",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 36,
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 0,
          "textDecorationColor": "black",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
          "width": "auto",
        },
        {
          "backgroundColor": "hsla(218, 89%, 51%, 1)",
        },
      ]
    }
    type="button"
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -1,
                  1,
                  16777215,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="topFade-r0"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -1,
                  1,
                  16777215,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottomFade-r0"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
            <RNSVGMask
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              height="100%"
              maskContentUnits={1}
              maskUnits={0}
              name="topMask-r0"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={
                  {
                    "brushRef": "topFade-r0",
                    "type": 1,
                  }
                }
                height="20%"
                propList={
                  [
                    "fill",
                  ]
                }
                width="100%"
                x="0"
                y="0"
              />
            </RNSVGMask>
            <RNSVGMask
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              height="100%"
              maskContentUnits={1}
              maskUnits={0}
              name="bottomMask-r0"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={
                  {
                    "brushRef": "bottomFade-r0",
                    "type": 1,
                  }
                }
                height="20%"
                propList={
                  [
                    "fill",
                  ]
                }
                width="100%"
                x="0"
                y="80%"
              />
            </RNSVGMask>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                [
                  0,
                  788529151,
                  1,
                  16777215,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="btnGlow-r0"
              rx={64}
              ry={64}
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={null}
            height="100%"
            mask="bottomMask-r0"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 788529151,
                "type": 0,
              }
            }
            strokeWidth={7}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={null}
            height="100%"
            mask="topMask-r0"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 788529151,
                "type": 0,
              }
            }
            strokeWidth={4}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={null}
            height="100%"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 4279461105,
                "type": 0,
              }
            }
            strokeWidth={1}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={null}
            height="100%"
            mask="bottomMask-r0"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 4279129293,
                "type": 0,
              }
            }
            strokeWidth={5}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={
              {
                "brushRef": "btnGlow-r0",
                "type": 1,
              }
            }
            height="100%"
            propList={
              [
                "fill",
              ]
            }
            rx={8}
            ry={8}
            width="100%"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        isHidden={false}
        justifyContent="center"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "zIndex": 1,
            },
            {
              "opacity": 1,
            },
          ]
        }
        zIndex={1}
      >
        <Text
          accessible={true}
          color="interactive.text.onPrimary.normal"
          data-blade-component="base-text"
          fontSize={100}
          fontWeight="medium"
          lineHeight={100}
          marginX="spacing.2"
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 4,
                "marginRight": 4,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          Hover me
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="tooltip-modal-backdrop"
  >
    <View
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateX": 4,
            },
          ],
        }
      }
    >
      <View
        collapse={false}
        colorScheme="light"
        data-blade-component="base-box"
        display="flex"
        elevation={20}
        flexDirection="column"
        gap="spacing.2"
        maxWidth="200px"
        onLayout={[Function]}
        position="absolute"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": 4,
              "maxWidth": 200,
              "paddingBottom": 12,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 12,
              "position": "absolute",
            },
            {
              "backgroundColor": "hsla(0, 0%, 0%, 0.72)",
              "borderRadius": 12,
              "left": -200,
              "position": "absolute",
              "top": -210,
              "zIndex": 1100,
            },
            {
              "elevation": 8,
              "shadowColor": "hsla(200, 10%, 18%, 1)",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 2,
            },
          ]
        }
        styles={
          {
            "left": -200,
            "position": "absolute",
            "top": -210,
            "zIndex": 1100,
          }
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          letterSpacing={50}
          lineHeight={75}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 0.88)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": -0.15600000000000003,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Hello world
        </Text>
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="14px"
            bbWidth="14px"
            data-blade-component="icon"
            focusable={false}
            height="14px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {},
                  {},
                ],
                {
                  "flex": 0,
                  "height": 14,
                  "width": 14,
                },
              ]
            }
            styles={{}}
            vbHeight={14}
            vbWidth={14}
            width="14px"
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M0,0 H14 L7,8 Q7,8 7,8 Z"
                fill={
                  {
                    "payload": 4294967295,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                  ]
                }
                stroke={null}
              />
              <RNSVGPath
                d="M0,0 H14 L7,8 Q7,8 7,8 Z"
                fill={
                  {
                    "payload": 3087007744,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                  ]
                }
                stroke={null}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Tooltip /> should render tooltip with custom zIndex 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    borderRadius={8}
    buttonPaddingBottom="0px"
    buttonPaddingLeft="12px"
    buttonPaddingRight="12px"
    buttonPaddingTop="0px"
    collapsable={false}
    color="primary"
    data-blade-component="button"
    defaultBackgroundColor="hsla(218, 89%, 51%, 1)"
    defaultBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 89%, 51%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
    focusBackgroundColor="hsla(218, 87%, 43%, 1)"
    focusBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
    focusRingColor="hsla(218, 89%, 51%, 0.18)"
    focusable={true}
    hoverBackgroundColor="hsla(218, 87%, 43%, 1)"
    hoverBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
    hoverIconColor="hsla(0, 0%, 100%, 1)"
    isDefiniteLoading={false}
    isFullWidth={false}
    isLoading={false}
    isPressed={false}
    minHeight="36px"
    motionDuration="duration.xquick"
    motionEasing="easing.standard"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    size="medium"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "hsla(218, 89%, 51%, 1)",
          "borderColor": "black",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 0,
          "cursor": "pointer",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 36,
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 0,
          "textDecorationColor": "black",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
          "width": "auto",
        },
        {
          "backgroundColor": "hsla(218, 89%, 51%, 1)",
        },
      ]
    }
    type="button"
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -1,
                  1,
                  16777215,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="topFade-r2"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -1,
                  1,
                  16777215,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottomFade-r2"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
            <RNSVGMask
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              height="100%"
              maskContentUnits={1}
              maskUnits={0}
              name="topMask-r2"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={
                  {
                    "brushRef": "topFade-r2",
                    "type": 1,
                  }
                }
                height="20%"
                propList={
                  [
                    "fill",
                  ]
                }
                width="100%"
                x="0"
                y="0"
              />
            </RNSVGMask>
            <RNSVGMask
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              height="100%"
              maskContentUnits={1}
              maskUnits={0}
              name="bottomMask-r2"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={
                  {
                    "brushRef": "bottomFade-r2",
                    "type": 1,
                  }
                }
                height="20%"
                propList={
                  [
                    "fill",
                  ]
                }
                width="100%"
                x="0"
                y="80%"
              />
            </RNSVGMask>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                [
                  0,
                  788529151,
                  1,
                  16777215,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="btnGlow-r2"
              rx={64}
              ry={64}
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={null}
            height="100%"
            mask="bottomMask-r2"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 788529151,
                "type": 0,
              }
            }
            strokeWidth={7}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={null}
            height="100%"
            mask="topMask-r2"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 788529151,
                "type": 0,
              }
            }
            strokeWidth={4}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={null}
            height="100%"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 4279461105,
                "type": 0,
              }
            }
            strokeWidth={1}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={null}
            height="100%"
            mask="bottomMask-r2"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 4279129293,
                "type": 0,
              }
            }
            strokeWidth={5}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={
              {
                "brushRef": "btnGlow-r2",
                "type": 1,
              }
            }
            height="100%"
            propList={
              [
                "fill",
              ]
            }
            rx={8}
            ry={8}
            width="100%"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        isHidden={false}
        justifyContent="center"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "zIndex": 1,
            },
            {
              "opacity": 1,
            },
          ]
        }
        zIndex={1}
      >
        <Text
          accessible={true}
          color="interactive.text.onPrimary.normal"
          data-blade-component="base-text"
          fontSize={100}
          fontWeight="medium"
          lineHeight={100}
          marginX="spacing.2"
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 4,
                "marginRight": 4,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          Hover me
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="tooltip-modal-backdrop"
  >
    <View
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateX": 4,
            },
          ],
        }
      }
    >
      <View
        collapse={false}
        colorScheme="light"
        data-blade-component="base-box"
        display="flex"
        elevation={20}
        flexDirection="column"
        gap="spacing.2"
        maxWidth="200px"
        onLayout={[Function]}
        position="absolute"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": 4,
              "maxWidth": 200,
              "paddingBottom": 12,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 12,
              "position": "absolute",
            },
            {
              "backgroundColor": "hsla(0, 0%, 0%, 0.72)",
              "borderRadius": 12,
              "left": -200,
              "position": "absolute",
              "top": -210,
              "zIndex": 9999,
            },
            {
              "elevation": 8,
              "shadowColor": "hsla(200, 10%, 18%, 1)",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 2,
            },
          ]
        }
        styles={
          {
            "left": -200,
            "position": "absolute",
            "top": -210,
            "zIndex": 9999,
          }
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          letterSpacing={50}
          lineHeight={75}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 0.88)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": -0.15600000000000003,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Hello world
        </Text>
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="14px"
            bbWidth="14px"
            data-blade-component="icon"
            focusable={false}
            height="14px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {},
                  {},
                ],
                {
                  "flex": 0,
                  "height": 14,
                  "width": 14,
                },
              ]
            }
            styles={{}}
            vbHeight={14}
            vbWidth={14}
            width="14px"
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M0,0 H14 L7,8 Q7,8 7,8 Z"
                fill={
                  {
                    "payload": 4294967295,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                  ]
                }
                stroke={null}
              />
              <RNSVGPath
                d="M0,0 H14 L7,8 Q7,8 7,8 Z"
                fill={
                  {
                    "payload": 3087007744,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                  ]
                }
                stroke={null}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Tooltip /> should render with title 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    borderRadius={8}
    buttonPaddingBottom="0px"
    buttonPaddingLeft="12px"
    buttonPaddingRight="12px"
    buttonPaddingTop="0px"
    collapsable={false}
    color="primary"
    data-blade-component="button"
    defaultBackgroundColor="hsla(218, 89%, 51%, 1)"
    defaultBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 89%, 51%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
    focusBackgroundColor="hsla(218, 87%, 43%, 1)"
    focusBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
    focusRingColor="hsla(218, 89%, 51%, 0.18)"
    focusable={true}
    hoverBackgroundColor="hsla(218, 87%, 43%, 1)"
    hoverBoxShadow="inset 0 -1.5px 0px 0px hsla(218, 87%, 43%, 1), inset 0 0px 0px 0.5px hsla(218, 87%, 43%, 1), inset 0 1.5px 0px 0px hsla(0, 0%, 100%, 0.18), inset 0 -2px 0px 0px hsla(0, 0%, 100%, 0.18)"
    hoverIconColor="hsla(0, 0%, 100%, 1)"
    isDefiniteLoading={false}
    isFullWidth={false}
    isLoading={false}
    isPressed={false}
    minHeight="36px"
    motionDuration="duration.xquick"
    motionEasing="easing.standard"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    size="medium"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "hsla(218, 89%, 51%, 1)",
          "borderColor": "black",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 0,
          "cursor": "pointer",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 36,
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 0,
          "textDecorationColor": "black",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
          "width": "auto",
        },
        {
          "backgroundColor": "hsla(218, 89%, 51%, 1)",
        },
      ]
    }
    type="button"
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        pointerEvents="none"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -1,
                  1,
                  16777215,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="topFade-r1"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -1,
                  1,
                  16777215,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottomFade-r1"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
            <RNSVGMask
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              height="100%"
              maskContentUnits={1}
              maskUnits={0}
              name="topMask-r1"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={
                  {
                    "brushRef": "topFade-r1",
                    "type": 1,
                  }
                }
                height="20%"
                propList={
                  [
                    "fill",
                  ]
                }
                width="100%"
                x="0"
                y="0"
              />
            </RNSVGMask>
            <RNSVGMask
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              height="100%"
              maskContentUnits={1}
              maskUnits={0}
              name="bottomMask-r1"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={
                  {
                    "brushRef": "bottomFade-r1",
                    "type": 1,
                  }
                }
                height="20%"
                propList={
                  [
                    "fill",
                  ]
                }
                width="100%"
                x="0"
                y="80%"
              />
            </RNSVGMask>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                [
                  0,
                  788529151,
                  1,
                  16777215,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="btnGlow-r1"
              rx={64}
              ry={64}
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={null}
            height="100%"
            mask="bottomMask-r1"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 788529151,
                "type": 0,
              }
            }
            strokeWidth={7}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={null}
            height="100%"
            mask="topMask-r1"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 788529151,
                "type": 0,
              }
            }
            strokeWidth={4}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={null}
            height="100%"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 4279461105,
                "type": 0,
              }
            }
            strokeWidth={1}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={null}
            height="100%"
            mask="bottomMask-r1"
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            rx={8}
            ry={8}
            stroke={
              {
                "payload": 4279129293,
                "type": 0,
              }
            }
            strokeWidth={5}
            width="100%"
            x={0}
            y={0}
          />
          <RNSVGRect
            fill={
              {
                "brushRef": "btnGlow-r1",
                "type": 1,
              }
            }
            height="100%"
            propList={
              [
                "fill",
              ]
            }
            rx={8}
            ry={8}
            width="100%"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        alignItems="center"
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        isHidden={false}
        justifyContent="center"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexBasis": 0,
              "flexDirection": "row",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "center",
              "zIndex": 1,
            },
            {
              "opacity": 1,
            },
          ]
        }
        zIndex={1}
      >
        <Text
          accessible={true}
          color="interactive.text.onPrimary.normal"
          data-blade-component="base-text"
          fontSize={100}
          fontWeight="medium"
          lineHeight={100}
          marginX="spacing.2"
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 4,
                "marginRight": 4,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textAlign": "center",
                "textDecorationLine": "none",
              },
            ]
          }
          textAlign="center"
        >
          Hover me
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="tooltip-modal-backdrop"
  >
    <View
      style={
        {
          "opacity": 0,
          "transform": [
            {
              "translateX": 4,
            },
          ],
        }
      }
    >
      <View
        collapse={false}
        colorScheme="light"
        data-blade-component="base-box"
        display="flex"
        elevation={20}
        flexDirection="column"
        gap="spacing.2"
        maxWidth="200px"
        onLayout={[Function]}
        position="absolute"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": 4,
              "maxWidth": 200,
              "paddingBottom": 12,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 12,
              "position": "absolute",
            },
            {
              "backgroundColor": "hsla(0, 0%, 0%, 0.72)",
              "borderRadius": 12,
              "left": -200,
              "position": "absolute",
              "top": -210,
              "zIndex": 1100,
            },
            {
              "elevation": 8,
              "shadowColor": "hsla(200, 10%, 18%, 1)",
              "shadowOffset": {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 2,
            },
          ]
        }
        styles={
          {
            "left": -200,
            "position": "absolute",
            "top": -210,
            "zIndex": 1100,
          }
        }
      >
        <Text
          accessible={true}
          color="surface.text.staticWhite.normal"
          data-blade-component="text"
          fontFamily="text"
          fontSize={100}
          fontStyle="normal"
          fontWeight="semibold"
          letterSpacing={50}
          lineHeight={100}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 1)",
                "fontFamily": "Inter",
                "fontSize": 14,
                "fontStyle": "normal",
                "fontWeight": "600",
                "letterSpacing": -0.18200000000000002,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Tooltip title
        </Text>
        <Text
          accessible={true}
          color="surface.text.staticWhite.subtle"
          data-blade-component="text"
          fontFamily="text"
          fontSize={75}
          fontStyle="normal"
          fontWeight="regular"
          letterSpacing={50}
          lineHeight={75}
          style={
            [
              {
                "color": "hsla(0, 0%, 100%, 0.88)",
                "fontFamily": "Inter",
                "fontSize": 12,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": -0.15600000000000003,
                "lineHeight": 17,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "textDecorationLine": "none",
              },
            ]
          }
        >
          Hello world
        </Text>
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            align="xMidYMid"
            bbHeight="14px"
            bbWidth="14px"
            data-blade-component="icon"
            focusable={false}
            height="14px"
            importantForAccessibility="no-hide-descendants"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                [
                  {},
                  {},
                ],
                {
                  "flex": 0,
                  "height": 14,
                  "width": 14,
                },
              ]
            }
            styles={{}}
            vbHeight={14}
            vbWidth={14}
            width="14px"
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M0,0 H14 L7,8 Q7,8 7,8 Z"
                fill={
                  {
                    "payload": 4294967295,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                  ]
                }
                stroke={null}
              />
              <RNSVGPath
                d="M0,0 H14 L7,8 Q7,8 7,8 Z"
                fill={
                  {
                    "payload": 3087007744,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                  ]
                }
                stroke={null}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;
